# cmapM

./: CHANGELOG.TXT  README.md  setup.m  setup_env.m
+cmapm/+containers/: Container.m
+cmapm/@Pipeline/: Pipeline.m  download_test_data.m  dpeak_demo.m  ds_add_meta.m  ds_corr.m  ds_delete_meta.m  ds_get_annotations.m  ds_get_meta.m  ds_merge.m  ds_set_annotations.m  ds_slice.m  ds_transpose.m  example_methods.m  level1_to_level2.m  level2_to_level3.m  level3_to_level4.m  level4_to_level5.m  mkgct.m  mkgctstruct.m  mkgctx.m  mkgmt.m  mkgrp.m  mktbl.m  parse_gct.m  parse_gctx.m  parse_gmt.m  parse_grp.m  parse_lxb.m  parse_tbl.m  process_plate.m  robust_zscore.m
docs/: DataPipeline.md  Formats.md  SigToolDemo.md  gctx_tutorial.html  gctx_tutorial.m  gctx_tutorial_v2.m  sig_tool_demos.m
performance_testing/: matlab_parse_timing.m  matlab_write_timing.m
qc_modules/: dactyloscopy_pipe.m
qc_modules/dactyloscopy/: DactyloscopyMakePlots.m  calculate_cc_and_rank.m  cell_query_api.m  dactyloscopy.config  dactyloscopy_single.m  ds_slice_and_dice.m  find_ambiguous_clines.m  get_cell_line_metadata.m  guess_cell_line.m
sig_tools/: .gitignore  .gitrepo  DEVELOPMENT.TXT  README.md
sig_tools/alg/: amp2fold.m  anneal.m  apcluster.m  beadset_fingerprint.m  binsearch.m  class_edg.m  cmap_score_core.m  compute_es.m  compute_esmat.m  conclust.m  detect_hairpins.m  es_plot.m  fast_es_core.m  fdr_analyze_group.m  fdrgold.m  fold2amp.m  getcombinedes.m  mkrec.m  outlier1d.m  spectral_clustering.m  wvclassify.m  xyoutlier.m
sig_tools/ext/mtocpp/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  INSTALL  License.txt  Makefile  cmake_install.cmake  confscanner.cc  doxygen.conf  doxygen.conf.bak  mfilescanner_parser.cc  mtocpp  mtocpp_post  postprocess.cc  test.sh
sig_tools/ext/mtocpp/cmake/: FindRagel.cmake  WindowsToolChain.cmake
sig_tools/ext/mtocpp/darwin/: mtocpp  mtocpp_post
sig_tools/ext/mtocpp/docs/: _class_8m_source.html  _inherited_class_8m_source.html  _matlab_doc_maker_8m_source.html  annotated.html  changelist_8c_source.html  changelog0_1.html  changelog1_2.html  changelog1_3.html  changelog1_4.html  changelog1_5.html  changes.html  class__substitutes_8c_source.html  class_conf_file_scanner-members.html  class_conf_file_scanner.html  class_m_file_scanner-members.html  class_m_file_scanner.html  class_matlab_doc_maker-members.html  class_matlab_doc_maker.html  classcell.html  classchar.html  classcolvec.html  classdouble.html  classes.html  classexamples_1_1_class-members.html  classexamples_1_1_class.html  classexamples_1_1_inherited_class-members.html  classexamples_1_1_inherited_class.html  classfunction__handle.html  classhandle-members.html  classhandle.html  classinteger.html  classlogical.html  classmatrix.html  classordered__map-members.html  classordered__map.html  classrowvec.html  classsparsematrix.html  classstruct.html  classvarargin.html  classvarargout.html  (+52 more)
sig_tools/ext/mtocpp/docs/latex/: annotated.tex  changes.tex  class_conf_file_scanner.tex  class_m_file_scanner.tex  class_matlab_doc_maker.tex  classcell.tex  classchar.tex  classcolvec.tex  classdouble.tex  classexamples_1_1_class.tex  classexamples_1_1_inherited_class.tex  classfunction__handle.tex  classhandle.tex  classinteger.tex  classlogical.tex  classmatrix.tex  classordered__map.tex  classrowvec.tex  classsparsematrix.tex  classstruct.tex  classvarargin.tex  classvarargout.tex  developers.tex  dir_368113a2ad281be450bed52e66f13c81.tex  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.tex  dir_5f027b3e38cd5ebd50f0d6b85d46a66a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d2abedff24cb301aa843e2984e8a0c10.tex  download.tex  event.tex  files.tex  hierarchy.tex  index.tex  install.tex  licensing.tex  namespaceexamples.tex  namespaces.tex  refman.aux  refman.idx  refman.out  (+12 more)
sig_tools/ext/mtocpp/docs/search/: all_0.js  all_1.js  all_2.js  all_9.js  all_d.js  all_e.js  classes_1.js  classes_5.js  classes_8.js  classes_9.js  functions_0.js  functions_4.js  pages_3.js  pages_4.js  searchdata.js
sig_tools/ext/mtocpp/linux-gnu/: mtocpp  mtocpp_post
sig_tools/ext/mtocpp/src/: config.h.in  confscanner.h  confscanner.rl  mfilescanner.cc  mfilescanner.h  mfilescanner_parser.rl  mtocpp.cc  postprocess.rl
sig_tools/ext/mtocpp/src/docs/: DoxygenLayout.xml  changelist.c  download_licenses.c  doxygen.conf.in  install.c  mainpage.c  namespaces.c  tabs.css  tipps.c  tools.c  troubleshooting.c
sig_tools/ext/mtocpp/src/docs/+examples/: Class.m  InheritedClass.m  structArgFunc.m
sig_tools/ext/mtocpp/test/: .gitignore  classA.m  classA2_ref.cc  classA_ref.cc  conf  conf2  doxygen.conf  doxygen.m  doxygen2_ref.cc  doxygen_in_namespace2_ref.cc  doxygen_in_namespace_ref.cc  doxygen_ref.cc  mtoc.sh.in  plot2_ref.cc  plot_ref.cc  rectgrid2_ref.cc  rectgrid_ref.cc  test.sh.in  test2_ref.cc  test_ref.cc  update_refs.sh
sig_tools/ext/mtocpp/test/test/+grid/+rect/: doxygen_in_namespace.m
sig_tools/ext/mtocpp/test/test/+grid/+rect/@rectgrid/: plot.m  rectgrid.m  test.m
sig_tools/ext/mtocpp/tools/: MatlabDocMaker.m
tests/: TestArgParse.m  TestDataset.m  TestDict.m  TestGctIO.m
(+2322 files in other folders)
